force-app/main/default/objects/Case/fields/Chat_User_Source__c.field-meta.xml
<CustomField>
    <fullName>Chat_User_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Chat_User_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Agent/Distributor</fullName>
            </value>
            <value>
                <fullName>AllpointNetwork.com</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>ATMNetwork.com</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Cardtronics.com</fullName>
            </value>
            <value>
                <fullName>Cashzone</fullName>
            </value>
            <value>
                <fullName>CEC Visit</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>NCR Rep</fullName>
            </value>
            <value>
                <fullName>Operation Teamwork</fullName>
            </value>
            <value>
                <fullName>Organic Search/SEO</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Phone Inquiry</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>Programmatic</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Referral Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>