force-app/main/default/objects/Case/fields/Chat_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Chat_User_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>