force-app/main/default/objects/Case/fields/Child_Case_Escalated_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_Escalated_Date__c</fullName>
    <label>Child Case Escalated Date</label>
    <type>DateTime</type>
</CustomField>