force-app/main/default/objects/Case/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Created for story - EBA_SF-2589
This is addressing the changes needed to correct the confusing Creation and Close Date fields on the Survey invite notification.</description>
    <formula>DATEVALUE( ClosedDate )</formula>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>