force-app/main/default/objects/Case/fields/Close_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Close_Resolution__c</fullName>
    <description>Short description on on case close reason</description>
    <inlineHelpText>Short description on on case close reason</inlineHelpText>
    <label>Close Resolution</label>
    <type>TextArea</type>
</CustomField>