force-app/main/default/objects/Case/fields/Closed_without_Revenue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_without_Revenue_Reason__c</fullName>
    <description>Why was this case Closed without Revenue?</description>
    <inlineHelpText>Why was this case Closed without Revenue?</inlineHelpText>
    <label>Closed without Revenue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Account Terminated</fullName>
            </value>
            <value>
                <fullName>Data Delay</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Account Acquired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>