force-app/main/default/objects/Case/fields/CMC_ID__c.field-meta.xml
<CustomField>
    <fullName>CMC_ID__c</fullName>
    <label>CMC ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>