force-app/main/default/objects/Case/fields/Comment_Question__c.field-meta.xml
<CustomField>
    <fullName>Comment_Question__c</fullName>
    <label>Comment Question</label>
    <type>TextArea</type>
</CustomField>