force-app/main/default/objects/Case/fields/Confirmed_correct_email_in_NCR_setup__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_correct_email_in_NCR_setup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the invoice not received was a result of the customer not receiving the invoice via the system generated email, have you confirmed that the right email is being used in the NCR system setup?</description>
    <inlineHelpText>If the invoice not received was a result of the customer not receiving the invoice via the system generated email, have you confirmed that the right email is being used in the NCR system setup?</inlineHelpText>
    <label>Confirmed correct email in NCR setup?</label>
    <type>Checkbox</type>
</CustomField>