force-app/main/default/objects/Case/fields/Contact_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Email__c</fullName>
    <label>Contact Owner Email</label>
    <type>Email</type>
</CustomField>