force-app/main/default/objects/Case/fields/Contract_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Begin_Date__c</fullName>
    <description>This field will be used to represent the date the contract began for the Account</description>
    <inlineHelpText>When did the contract begin</inlineHelpText>
    <label>Contract Begin Date</label>
    <type>Date</type>
</CustomField>