force-app/main/default/objects/Case/fields/Contract_in_CFS__c.field-meta.xml
<CustomField>
    <fullName>Contract_in_CFS__c</fullName>
    <description>This field will be used to specify what the status of the contract in CFS</description>
    <inlineHelpText>What is the contract status in CFS</inlineHelpText>
    <label>Contract in CFS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>