force-app/main/default/objects/Case/fields/COO_Comments__c.field-meta.xml
<CustomField>
    <fullName>COO_Comments__c</fullName>
    <label>COO Comments</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>