force-app/main/default/objects/Case/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country Code of the customer that is assigned to the invoices on a dispute.</description>
    <label>Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>