force-app/main/default/objects/Case/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <label>Country Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>13</fullName>
                <label>13	CLA Area Office</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14	Other North Americas Country</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15	Other EMEA Country</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16	Corporate Level</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20	GERMANY CEE</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22	Other Asia Pacific Country</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>29	Permond Solution Group Level</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>AR	ARGENTINA</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>AT	AUSTRIA</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>AU	AUSTRALIA</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>BE	BELGIUM</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>BH	BAHRAIN</label>
            </value>
            <value>
                <fullName>BN</fullName>
                <label>BN	BRUNEI DARUSSALAM</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>CA	CANADA</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>CH	SWITZERLAND</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>CL	CHILE</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>CN	CHINA (PRC)</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>CO	COLOMBIA</label>
            </value>
            <value>
                <fullName>CY</fullName>
                <label>CY	CYPRUS</label>
            </value>
            <value>
                <fullName>CZ</fullName>
                <label>CZ	CZECH REPUBLIC</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>DE	GERMANY</label>
            </value>
            <value>
                <fullName>DK</fullName>
                <label>DK	DENMARK</label>
            </value>
            <value>
                <fullName>DO</fullName>
                <label>DO	DOMINICAN REPUBLIC</label>
            </value>
            <value>
                <fullName>EG</fullName>
                <label>EG	EGYPT</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>ES	SPAIN</label>
            </value>
            <value>
                <fullName>FJ</fullName>
                <label>FJ	FIJI</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>FR	FRANCE</label>
            </value>
            <value>
                <fullName>GB</fullName>
                <label>GB	UNITED KINGDOM</label>
            </value>
            <value>
                <fullName>GH</fullName>
                <label>GH	GHANA</label>
            </value>
            <value>
                <fullName>GR</fullName>
                <label>GR	GREECE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>