force-app/main/default/objects/Case/fields/Creation_Category_Tags__c.field-meta.xml
<CustomField>
    <fullName>Creation_Category_Tags__c</fullName>
    <label>Creation Category Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Creation_Category_Tags</valueSetName>
    </valueSet>
</CustomField>