force-app/main/default/objects/Case/fields/Credit_already_in_dispute__c.field-meta.xml
<CustomField>
    <fullName>Credit_already_in_dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the credit already in dispute?</description>
    <inlineHelpText>Was the credit already in dispute?</inlineHelpText>
    <label>Credit already in dispute?</label>
    <type>Checkbox</type>
</CustomField>