force-app/main/default/objects/Case/fields/CSAT_Response__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Response__c</fullName>
    <description>SFHS-289 - Qualtrics CSAT field</description>
    <label>CSAT Response</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>