force-app/main/default/objects/Case/fields/Current_Action_1__c.field-meta.xml
<CustomField>
    <fullName>Current_Action_1__c</fullName>
    <label>Action 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>