force-app/main/default/objects/Case/fields/Current_Action_2__c.field-meta.xml
<CustomField>
    <fullName>Current_Action_2__c</fullName>
    <label>Action 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>