force-app/main/default/objects/Case/fields/Current_Action_3_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Action_3_Owner__c</fullName>
    <label>Action 3 Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>