force-app/main/default/objects/Case/fields/Current_Billing_Impact__c.field-meta.xml
<CustomField>
    <fullName>Current_Billing_Impact__c</fullName>
    <label>Current Billing Impact $:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>