force-app/main/default/objects/Case/fields/Customer_agrees_HWE_records_100_accurat__c.field-meta.xml
<CustomField>
    <fullName>Customer_agrees_HWE_records_100_accurat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer agrees records 100% accurate?</label>
    <type>Checkbox</type>
</CustomField>