force-app/main/default/objects/Case/fields/Customer_Approval_for_this_Billing__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_for_this_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you get customer approval prior to releasing this for billing?</description>
    <inlineHelpText>Did you get customer approval prior to releasing this for billing?</inlineHelpText>
    <label>Customer Approval for this Billing?</label>
    <type>Checkbox</type>
</CustomField>