force-app/main/default/objects/Case/fields/Customer_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Call_Completed__c</fullName>
    <label>Customer Call Completed_old</label>
    <type>Date</type>
</CustomField>