force-app/main/default/objects/Case/fields/Customer_Contact_Email1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Email1__c</fullName>
    <formula>Contact.Email</formula>
    <label>Customer Contact Email</label>
    <type>Text</type>
</CustomField>