force-app/main/default/objects/Case/fields/Customer_Contact_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Phone1__c</fullName>
    <formula>Contact.Phone</formula>
    <label>Customer Contact Phone</label>
    <type>Text</type>
</CustomField>