force-app/main/default/objects/Case/fields/Customer_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_Time__c</fullName>
    <label>Customer Response Time (Hours:Min:Sec)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>