force-app/main/default/objects/Case/fields/Customer_Response_Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_Time_Seconds__c</fullName>
    <label>Customer Response Time (Seconds)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>