force-app/main/default/objects/Case/fields/CX_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CX_Case_Number__c</fullName>
    <description>DO not delete it. This is a developer field used in linkCaseWithNPSSurveyResult trigger class for VOC</description>
    <label>CX Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>