force-app/main/default/objects/Case/fields/Detractor_Case_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Detractor_Case_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detractor Case Escalated</label>
    <type>Checkbox</type>
</CustomField>