force-app/main/default/objects/Case/fields/Detractor_Case_Escalated_Date__c.field-meta.xml
<CustomField>
    <fullName>Detractor_Case_Escalated_Date__c</fullName>
    <label>Detractor Case Escalated Date</label>
    <type>DateTime</type>
</CustomField>