force-app/main/default/objects/Case/fields/Detractor_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Detractor_Case_Number__c</fullName>
    <label>Detractor Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>