force-app/main/default/objects/Case/fields/Detractor_Case_URL__c.field-meta.xml
<CustomField>
    <fullName>Detractor_Case_URL__c</fullName>
    <label>Detractor Case URL</label>
    <type>Url</type>
</CustomField>