force-app/main/default/objects/Case/fields/Did_it_have_items_never_installed__c.field-meta.xml
<CustomField>
    <fullName>Did_it_have_items_never_installed__c</fullName>
    <description>This field will be used by the entitlements analyst to determine if their were items never installed</description>
    <inlineHelpText>Were items never installed</inlineHelpText>
    <label>Did it have items never installed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>