force-app/main/default/objects/Case/fields/Dispute_Analyst_Email__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Analyst_Email__c</fullName>
    <description>The email of the dispute analyst assigned to the dispute.</description>
    <inlineHelpText>The email of the dispute analyst assigned to the dispute.</inlineHelpText>
    <label>Dispute Analyst Email</label>
    <type>Email</type>
</CustomField>