force-app/main/default/objects/Case/fields/Dispute_Analyst_Name__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Analyst_Name__c</fullName>
    <description>The name of the dispute analyst assigned to the dispute.  Note if not assigned it is assigned to the queue.</description>
    <inlineHelpText>The name of the dispute analyst assigned to the dispute.  Note if not assigned it is assigned to the queue.</inlineHelpText>
    <label>Dispute Analyst Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ab251082</fullName>
                <label>Abhijit Bhattacharjee</label>
            </value>
            <value>
                <fullName>am185511</fullName>
                <label>Amirah Aqilah Mahfiz</label>
            </value>
            <value>
                <fullName>al185173</fullName>
                <label>Andrzej Lesiczka</label>
            </value>
            <value>
                <fullName>AB251081</fullName>
                <label>Anja Bjegovic</label>
            </value>
            <value>
                <fullName>Assigned to Queue</fullName>
                <default>true</default>
                <label>Assigned to Queue</label>
            </value>
            <value>
                <fullName>BS185321</fullName>
                <label>Barbara Stefanski</label>
            </value>
            <value>
                <fullName>bi250023</fullName>
                <label>Brian Ivy</label>
            </value>
            <value>
                <fullName>Charlyn Sanchez</fullName>
            </value>
            <value>
                <fullName>dm185051</fullName>
                <label>Damanjeet Puri</label>
            </value>
            <value>
                <fullName>dl185147</fullName>
                <label>Dorota Lisowska</label>
            </value>
            <value>
                <fullName>ej185034</fullName>
                <label>Emil Jackson</label>
            </value>
            <value>
                <fullName>Ferai Mberi</fullName>
            </value>
            <value>
                <fullName>gr185126</fullName>
                <label>Gajender Rathore</label>
            </value>
            <value>
                <fullName>hg185061</fullName>
                <label>Harsh Gurav</label>
            </value>
            <value>
                <fullName>Hiralkumar Ahir</fullName>
            </value>
            <value>
                <fullName>Jackie Watson</fullName>
            </value>
            <value>
                <fullName>jr185287</fullName>
                <label>Janeese Robinson</label>
            </value>
            <value>
                <fullName>John Benitez</fullName>
            </value>
            <value>
                <fullName>kj185072</fullName>
                <label>Kamil Jablonowski</label>
            </value>
            <value>
                <fullName>ke185017</fullName>
                <label>Kathrina Saranillo</label>
            </value>
            <value>
                <fullName>LM185205</fullName>
                <label>Liliia Mohyrova</label>
            </value>
            <value>
                <fullName>MP185225</fullName>
                <label>Magdalena Pankowska</label>
            </value>
            <value>
                <fullName>ms250789</fullName>
                <label>Manikanta Shekar</label>
            </value>
            <value>
                <fullName>ms185544</fullName>
                <label>Maria Sieluzycka</label>
            </value>
            <value>
                <fullName>MJ250395</fullName>
                <label>Marko Josipovic</label>
            </value>
            <value>
                <fullName>ma185260</fullName>
                <label>Marta Abramek</label>
            </value>
            <value>
                <fullName>Mary Pearl Luzada</fullName>
            </value>
            <value>
                <fullName>Mary Precilla</fullName>
            </value>
            <value>
                <fullName>mt185092</fullName>
                <label>Mehul Thakkar</label>
            </value>
            <value>
                <fullName>Mequia Quiachon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>