force-app/main/default/objects/Case/fields/Dispute_Analyst_Phone__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Analyst_Phone__c</fullName>
    <description>The phone # of the dispute analyst assigned to the dispute.  This is editable.</description>
    <inlineHelpText>The phone # of the dispute analyst assigned to the dispute.  This is editable</inlineHelpText>
    <label>Dispute Analyst Phone</label>
    <type>Phone</type>
</CustomField>