force-app/main/default/objects/Case/fields/Dispute_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Case_Owner__c</fullName>
    <description>Who worked the dispute case?</description>
    <formula>Dispute_Case__r.Owner:User.FirstName + &quot; &quot; +Dispute_Case__r.Owner:User.LastName</formula>
    <inlineHelpText>Who worked the dispute case?</inlineHelpText>
    <label>Dispute Case Owner</label>
    <type>Text</type>
</CustomField>