force-app/main/default/objects/Case/fields/Dispute_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Close_Reason__c</fullName>
    <description>The reason why the dispute is being closed.</description>
    <inlineHelpText>The reason why the dispute is being closed.</inlineHelpText>
    <label>Dispute Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>374</fullName>
                <label>Contract Issues</label>
            </value>
            <value>
                <fullName>393</fullName>
                <label>Covered Under Maintenance or Incorrect Entitlement</label>
            </value>
            <value>
                <fullName>723</fullName>
                <label>COVID - 19</label>
            </value>
            <value>
                <fullName>747</fullName>
                <label>Denied</label>
            </value>
            <value>
                <fullName>417</fullName>
                <label>Duplicate Shipment/Invoice/Site</label>
            </value>
            <value>
                <fullName>439</fullName>
                <label>Equipment/Service Disputes/Non-Performance</label>
            </value>
            <value>
                <fullName>460</fullName>
                <label>Freight Dispute</label>
            </value>
            <value>
                <fullName>477</fullName>
                <label>Global Account Issues</label>
            </value>
            <value>
                <fullName>497</fullName>
                <label>Incorrect / Missing  PO#</label>
            </value>
            <value>
                <fullName>521</fullName>
                <label>Incorrect Customer Data</label>
            </value>
            <value>
                <fullName>544</fullName>
                <label>Invoice Delivery and Submission Issues</label>
            </value>
            <value>
                <fullName>748</fullName>
                <label>Long Approval Process</label>
            </value>
            <value>
                <fullName>570</fullName>
                <label>Missing Documentation/Data</label>
            </value>
            <value>
                <fullName>592</fullName>
                <label>PO Amount Discrepancy</label>
            </value>
            <value>
                <fullName>612</fullName>
                <label>Pricing/Quantity Dispute</label>
            </value>
            <value>
                <fullName>746</fullName>
                <label>Product Issue</label>
            </value>
            <value>
                <fullName>639</fullName>
                <label>Request to Cancel Service</label>
            </value>
            <value>
                <fullName>661</fullName>
                <label>Returned Product</label>
            </value>
            <value>
                <fullName>679</fullName>
                <label>Seasonal Customer</label>
            </value>
            <value>
                <fullName>696</fullName>
                <label>Tax Dispute</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>