force-app/main/default/objects/Case/fields/Dispute_Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Created_By_Name__c</fullName>
    <label>Dispute Created By Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>