force-app/main/default/objects/Case/fields/Dispute_CreatedBy_Qlook__c.field-meta.xml
<CustomField>
    <fullName>Dispute_CreatedBy_Qlook__c</fullName>
    <label>Dispute CreatedBy Qlook</label>
    <length>8</length>
    <type>Text</type>
</CustomField>