force-app/main/default/objects/Case/fields/Dispute_Details__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Details__c</fullName>
    <description>A Detailed description of the dispute being logged.</description>
    <inlineHelpText>A Detailed description of the dispute being logged.</inlineHelpText>
    <label>Dispute Details</label>
    <length>120000</length>
    <type>LongTextArea</type>
</CustomField>