force-app/main/default/objects/Case/fields/Dispute_Source__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Source__c</fullName>
    <label>Dispute Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>