force-app/main/default/objects/Case/fields/Dispute_Type__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Type__c</fullName>
    <label>Dispute Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial Credit</fullName>
            </value>
            <value>
                <fullName>Full Credit</fullName>
            </value>
            <value>
                <fullName>Credit Rebill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>