force-app/main/default/objects/Case/fields/Dispute_Updated_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Updated_By_Name__c</fullName>
    <label>Dispute Updated By Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>